--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://Amogh-G-K.github.io/DSA-Problems-Tracker/",
+  "homepage": "https://amogh-g-k.github.io/DSA-Problems-Tracker/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
