--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,7 +18,7 @@ jobs:
   build-and-deploy:
     environment:
       name: github-pages
-    
+
     runs-on: ubuntu-latest
 
     steps:
@@ -42,7 +42,7 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: skywarth/vite-github-pages-deployer@v1.5.0
         with:
-          public_base_path: /  # This is the base
+          public_base_path: /DSA-Problems-Tracker/  # This is the base
           build_path: ./dist
           install_phase_node_env: dev
           build_phase_node_env: production
